Added SetC2Key command support. Updated E4 to latest develop version
